refactoring SDS robin and longhorn functionality
Change-Id: Idc759828e012f8a13af62bdbb3ba553ef6907c03

--- a/inventory/group_vars/cloud_vxlanid_40.yaml
+++ b/inventory/group_vars/cloud_vxlanid_40.yaml
@@ -22,6 +22,14 @@ load_balancer_pool_cidr: [
   "10.200.0.50-10.200.0.70"
 ]
 
+storage_provider: "robin"
+storage_cluster_trait_repo_install: false
+
+# Disks to use for LVM
+robin_disk_paths: [
+  "/dev/sdb"
+]
+
 ###
 ### Cluster Network (Multus)
 ###
