--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -208,20 +208,21 @@ snapshot_gcs_bucket_base: "{{ lookup('env', 'SNAPSHOT_GCS') | default( [ google_
 ###
 ### Storage providers are installed via Cluster Trait Repos. Configuration for CTR is done in this automation (where possible)
 ###
+storage_provider: "none" # Current Options: longhorn, none & Future Options: openebs, portworx. NOTE: storage_provider_repo_url must match with storage_provider_repo_url
 ### NOTE: Storage providers can be installed during provsioning, but will not be done by default. Adding a trait to the Primary Root Repo is the preferred new method unless variables are required
 ###
-# Set to "true" if the SDS should be applied during provisioning, otherwise only the supporting functionality (ie: lvm groups or cluster-specific default settings will be added)
-storage_provider_install: false
+# Set to "true" if the ClusterTraitRepo SDS should be applied during provisioning, otherwise only the supporting functionality (ie: lvm groups or cluster-specific default settings will be added)
+storage_cluster_trait_repo_install: false
 # SDS Operator to setup and optionally install. Each SDS may have setup that is requried on the physical host(s), selecting one from the list will install the host-config and/or specific configuration
-# but will not install the SDS unless the `storage_provider_install` is set to true.
-storage_provider: "none" # Current Options: robin, longhorn, none & Future Options: openebs, portworx. NOTE: storage_provider_repo_url must match with storage_provider_repo_url
+#       but will not install the SDS unless the `storage_provider_install` is set to true.
 ### Storage Provider Cluster Trait Repo (ex: https://gitlab.com/gcp-solutions-public/retail-edge/available-cluster-traits)
 storage_provider_repo_url: "{{ lookup('env', 'SDS_REPO_URL') | default('https://gitlab.com/gcp-solutions-public/retail-edge/available-cluster-traits/robin-io-anthos.git', True) }}"
+storage_provider_repo_branch: "{{ lookup('env', 'SDS_REPO_BRANCH') | default('main', True) }}"
 storage_provider_repo_type: "{{ lookup('env', 'SDS_REPO_STRUCTURE') | default('hierarchy', True) }}"
 storage_provider_auth_type: "{{ lookup('env', 'SDS_REPO_TYPE') | default('token', True) }}" # NOTE: Initial feature functionality can ONLY support token
 storage_provider_user_user: "{{ lookup('env', 'SDS_TOKEN_USER') | default(scm_token_user, True) }}"
 storage_provider_user_token: "{{ lookup('env', 'SDS_TOKEN_TOKEN') | default(scm_token_token, True) }}"
-storage_provider_auth_secret: "{{storage_provider}}-git-cred" # GCP Secret Manager secret will be created with this name using the name/token above
+storage_provider_auth_secret: "{{ storage_provider }}-git-creds" # GCP Secret Manager secret will be created with this name using the name/token above
 
 # Storage provider backup bucket (where PVs are backed up to)
 storage_provider_gcs_bucket_name: "{{ google_project_id }}-{{ cluster_name }}-sds-backup"
@@ -229,6 +230,24 @@ storage_provider_hmac_gcm_secret: "{{ google_project_id }}-{{ cluster_name }}-sd
 
 # Storage provider roots for disc storage
 storage_provider_roots: [ "/customer" ]
+
+### Robin SDS Specific Variables
+robin_disk_paths: [
+  # Override this in host-specific files
+  # Provide a list of disks that should be included in the LVM Group that the SDS is configured to use for discovery
+]
+# Prefix used in the naming of the Logical Volume. NOTE: This MUST match the SDS configuration in the Repository. Default is `robin-lvm`
+robin_lvm_name: "robin-lv"
+
+# name of the JSON formatted Robin IO license file REQUIRED. There MUST be a file named this in the `build-artifacts/` folder
+robin_license_file_name: "robinio-sds.json.license"
+# location of local JSON license file
+robin_license_local_uri: "./build-artifacts/{{ robin_license_file_name }}"
+# Name of GCP Secret used by Robin. Secret contains JSON formatted information on the license. Defining this secret in GCP secret manager and providing an ACTIVE version will skip the license check locally
+robin_gcp_secret_name: "robin-sds-license"
+
+# Use default LVM2 group for Robin (If "false", user must set up an LVM group to match the SDS configuration, add PV/LVMs to the group and fully manage the LVM operations)
+setup_default_lvm: true
 
 ### Multipath Disk Service - Can cause issues with SDS, very uncommon to need multipath unless using iSCSI. Defaults to false
 enable_multipath_service: false
