removing pip-upgrade from builder
Change-Id: I38e9a39c263cf2a0a24378c15617498948433699

--- a/docker-build/Dockerfile
+++ b/docker-build/Dockerfile
@@ -27,7 +27,7 @@ RUN ln -fs /usr/share/zoneinfo/UTC /etc/localtime
 RUN apt-get install -y --no-install-recommends tzdata
 #install dependencies...
 RUN apt-get install -y apt-utils vim nano python3-pip python-is-python3 curl wget openssh-server cron gettext iputils-ping direnv
-RUN pip install --upgrade pip
+# RUN pip install --upgrade pip # Removing for security purposes
 
 RUN mkdir -p /tmp/gcloud-install \
     && mkdir -p /var/gcloud-sdk \
