--- a/docker-build/cloudbuild.yaml
+++ b/docker-build/cloudbuild.yaml
@@ -15,10 +15,11 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     id: Build Provisioning Image
-    args: ['build', '-t', 'gcr.io/${PROJECT_ID}/consumer-edge-install', 'docker-build/.']
+    args: ['build', '-f', 'docker-build/Dockerfile.production', '-t', 'gcr.io/${PROJECT_ID}/consumer-edge-install', 'docker-build/.']
 
 images:
   - gcr.io/${PROJECT_ID}/consumer-edge-install
 
 options:
-  machineType: 'E2_HIGHCPU_8'
+  # machineType: 'E2_HIGHCPU_8' # E2_HIGHCPU_32
+  machineType: 'E2_HIGHCPU_32'
