--- a/roles/abm-post-install/tasks/add-kube-ps1.yml
+++ b/roles/abm-post-install/tasks/add-kube-ps1.yml
@@ -76,3 +76,16 @@
     - kube-ps1
     when:
     - target_os == "ubuntu"
+
+  - name: Add k alias with completion
+    lineinfile:
+      path: "/home/{{ item }}/.bashrc"
+      line: alias k="kubectl complete -F __start_kubectl k"
+    loop:
+      - "{{ ansible_user }}"
+      - "{{ abm_install_user }}"
+    tags:
+    - optional
+    - kube-ps1
+    when:
+    - target_os == "ubuntu"
